--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="container">
 
     <article class="main-img">
-      <img src="/images/image-equilibrium.jpg" style="border-radius: 0.5rem;" >
-      <div style="border-radius: 0.5rem;"><img src="/images/icon-view.svg"></div>
+      <img src="./images/image-equilibrium.jpg" style="border-radius: 0.5rem;" >
+      <div style="border-radius: 0.5rem;"><img src="./images/icon-view.svg"></div>
     </article>
 
 
@@ -26,15 +26,15 @@
       <p>Our Equilibrium collection promotes balance and calm.</p>
 
       <ul>
-        <li><img src="/images/icon-ethereum.svg">0.041 ETH</li>
-        <li><img src="/images/icon-clock.svg">3 days left</li>
+        <li><img src="./images/icon-ethereum.svg">0.041 ETH</li>
+        <li><img src="./images/icon-clock.svg">3 days left</li>
       </ul>
 
     </article>
 
 
     <article class="avatar">
-      <img src="/images/image-avatar.png">
+      <img src="./images/image-avatar.png">
 
       <p>Creation of <span>Jules Wyvern</span></p>
     </article>
